@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.35  2007-09-21 11:43:58  tino
+# Revision 1.36  2007-09-21 11:50:40  tino
+# C++ flags added
+#
+# Revision 1.35  2007/09/21 11:43:58  tino
 # Makefile now should compile targets once
 #
 # Revision 1.34  2007/01/28 03:06:19  tino
@@ -116,6 +119,9 @@
 #N STD_CFLAGS
 #R#0#  STD_CFLAGS=-g -Wall -O3
 
+#N STD_CCFLAGS
+#R#0#  STD_CCFLAGS=-g -Wall -O3
+
 #N STD_LDFLAGS
 #R#0# STD_LDFLAGS=
 
@@ -153,7 +159,8 @@
 #C# Except for the compiler generated dependencies at the end
 #C# from here no changes shall be needed.
 # Do not define those yourself!
-     CFLAGS=$(DBG_FLAGS) $(ADD_CFLAGS) $(STD_CFLAGS) -I$(HERE)
+     CFLAGS=$(DBG_FLAGS) $(DBG_CFLAGS) $(ADD_CFLAGS) $(STD_CFLAGS) -I$(HERE)
+   CXXFLAGS=$(DBG_CCFLAGS) $(ADD_CCFLAGS) $(STD_CCFLAGS) -I$(HERE)
     LDFLAGS=$(DBG_LDFLAGS) $(ADD_LDFLAGS) $(STD_LDFLAGS)
      LDLIBS=$(DBG_LDLIBS) $(ADD_LDLIBS) $(STD_LDLIBS)
 
